--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weathering API</title>
-    <link rel="stylesheet" href= C:\Users\nguye\Desktop\REPOS\Challenge-6\CSS\style.css>
+    <link rel="stylesheet" href= "./CSS/style.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src=C:\Users\nguye\Desktop\REPOS\Challenge-6\JAVASCRIPT\logic.js></script>
+    <script src="./JAVASCRIPT/logic.js"></script>
 </body>
 
 </html>
